Updated notebook code to reflect a new data directory

--- a/notebooks/01-zksync-data.ipynb
+++ b/notebooks/01-zksync-data.ipynb
@@ -40,13 +40,13 @@
    "outputs": [],
    "source": [
     "# Set directory paths\n",
-    "path_data_dir = os.path.abspath(\n",
+    "data_dir = os.path.abspath(\n",
     "    os.path.join(os.getcwd(), \"..\", \"data\"))\n",
-    "path_plots_dir = os.path.abspath(os.path.join(path_data_dir, \"plots\")) + os.sep\n",
+    "plots_dir = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"plots\")) + os.sep\n",
     "\n",
     "# Create directories if they don't exist\n",
-    "os.makedirs(path_data_dir, exist_ok=True)\n",
-    "os.makedirs(path_plots_dir, exist_ok=True)"
+    "os.makedirs(data_dir, exist_ok=True)\n",
+    "os.makedirs(plots_dir, exist_ok=True)"
    ]
   },
   {
@@ -76,18 +76,17 @@
    "outputs": [],
    "source": [
     "# Existing dataset\n",
-    "path_parquet = os.path.abspath(os.path.join(path_data_dir, \"parquet_files\"))\n",
     "path_data = dict()\n",
     "path_data['blocks'] = os.path.abspath(\n",
-    "    os.path.join(path_parquet, \"blocks\", \"blocks_*.parquet\"))\n",
+    "    os.path.join(data_dir, \"blocks\", \"blocks_*.parquet\"))\n",
     "path_data['transactions'] = os.path.abspath(os.path.join(\n",
-    "    path_parquet, \"transactions\", \"transactions_*.parquet\"))\n",
+    "    data_dir, \"transactions\", \"transactions_*.parquet\"))\n",
     "path_data['tx_receipts'] = os.path.abspath(os.path.join(\n",
-    "    path_parquet, \"tx_receipts\", \"tx_receipts_*.parquet\"))\n",
+    "    data_dir, \"tx_receipts\", \"tx_receipts_*.parquet\"))\n",
     "path_data['logs'] = os.path.abspath(\n",
-    "    os.path.join(path_parquet, \"logs\", \"logs_*.parquet\"))\n",
+    "    os.path.join(data_dir, \"logs\", \"logs_*.parquet\"))\n",
     "path_data['l2_to_l1_logs'] = os.path.abspath(os.path.join(\n",
-    "    path_parquet, \"l2_to_l1_logs\", \"l2_to_l1_logs_*.parquet\"))"
+    "    data_dir, \"l2_to_l1_logs\", \"l2_to_l1_logs_*.parquet\"))"
    ]
   },
   {
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +512,7 @@
     "fig.update_layout(yaxis_title=\"Number of contracts deployed\",\n",
     "                  xaxis_title=\"Date\", legend=dict(xanchor='center', x=0.5, y=1.02, orientation='h'))\n",
     "\n",
-    "fig.write_image(path_plots_dir+'number-of-contracts-deployed.pdf')\n",
+    "fig.write_image(plots_dir+'number-of-contracts-deployed.pdf')\n",
     "fig.show('png')"
    ]
   },
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +590,7 @@
     "    xaxis_title=\"Percentage\",\n",
     ")\n",
     "\n",
-    "fig.write_image(path_plots_dir+\"top-events-called.pdf\",\n",
+    "fig.write_image(plots_dir+\"top-events-called.pdf\",\n",
     "                width=width, height=height)\n",
     "fig.show('png')"
    ]
@@ -621,7 +620,7 @@
     "                  xaxis_title=\"Date\", legend=dict(xanchor='center', x=0.5, y=1.02, orientation='h'))\n",
     "fig.update_xaxes(range=['2023-02-15', '2024-03-22'])\n",
     "\n",
-    "fig.write_image(path_plots_dir+'number-of-transactions.pdf')\n",
+    "fig.write_image(plots_dir+'number-of-transactions.pdf')\n",
     "fig.show('png')"
    ]
   },
@@ -655,7 +654,7 @@
     "                  xaxis_title=\"Date\", legend=dict(xanchor='center',\n",
     "                                                  x=0.5, y=1.1, orientation='h'))\n",
     "\n",
-    "fig.write_image(path_plots_dir+'number-of-unique-addresses-zksync.pdf')\n",
+    "fig.write_image(plots_dir+'number-of-unique-addresses-zksync.pdf')\n",
     "fig.show('png')"
    ]
   }
