Improve notebook text

--- a/notebooks/02-data-exploration-fees.ipynb
+++ b/notebooks/02-data-exploration-fees.ipynb
@@ -5,9 +5,11 @@
    "id": "75c96028-169d-4dd0-98be-78a1780bba6b",
    "metadata": {},
    "source": [
-    "# ZKsyn data exploration - Fees and gas\n",
+    "# ZKsync data exploration - Fees and gas\n",
     "\n",
     "#### [Maria Silva](https://github.com/misilva73), June 2024\n",
+    "\n",
+    "This notebook looks into gas usage and transaction fees for zksync over almost 1 year. We use two main sources of data - blocks and transaction receipts. This notebook should be an example of interacting and processing our [ZKsync public datasets](https://data.zksync.dev).\n",
     "\n",
     "## Import packages"
    ]
@@ -63,7 +65,9 @@
    "id": "502d007c-c999-4311-9e03-5340278376aa",
    "metadata": {},
    "source": [
-    "##  Load Polars DataFrames"
+    "##  Load Polars DataFrames\n",
+    "\n",
+    "Since the dataset is quite large, we are using polars to process the data. We first compute daily aggregates and then convert these smaller aggregated datasets into pandas DataFrames we can more easily use and plot."
    ]
   },
   {
@@ -191,7 +195,9 @@
    "id": "1b782d06-1496-4fa6-b51e-a5800b0c1a43",
    "metadata": {},
    "source": [
-    "##  Process Polars DataFrames"
+    "##  Process Polars DataFrames\n",
+    "\n",
+    "This is the step where we compute the aggregates and convert to pandas."
    ]
   },
   {
@@ -457,7 +463,9 @@
    "id": "206d5502-07be-44e2-95db-4de33fa80064",
    "metadata": {},
    "source": [
-    "## Gas usage analysis"
+    "## Gas usage analysis\n",
+    "\n",
+    "Now, let's look at gas usage!"
    ]
   },
   {
@@ -581,7 +589,9 @@
    "id": "c83a8f42-4549-4b1b-9212-cbd397fc38af",
    "metadata": {},
    "source": [
-    "## Gas fees analysis"
+    "## Gas fees analysis\n",
+    "\n",
+    "And, finally, we can look into transaction fees."
    ]
   },
   {
