Fix MathJax warning in plots

--- a/notebooks/02-data-exploration-fees.ipynb
+++ b/notebooks/02-data-exploration-fees.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import polars as pl\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
@@ -62,6 +63,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e106c8d8-715c-409e-94e5-b58cc455e5e2",
+   "metadata": {},
+   "source": [
+    "Sometimes, plotly takes some time to load Mathjax library, which messes with the pdf saves. This next cell is only here to save a garbage plot and guarantee that, for the actual final plots, the library is already loaded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3fc98076-2755-4d13-b03b-d795b6a28147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig=px.scatter(x=[0, 1, 2, 3, 4], y=[0, 1, 4, 9, 16])\n",
+    "fig.write_image(\"some_figure.pdf\", format=\"pdf\")\n",
+    "time.sleep(2)\n",
+    "os.remove(\"some_figure.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "502d007c-c999-4311-9e03-5340278376aa",
    "metadata": {},
    "source": [
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ae74e7f1-a9e2-43bf-b667-ce6457b39395",
    "metadata": {},
    "outputs": [],
@@ -88,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8e1b233b-52cb-41aa-ba93-98d2a80ec9ca",
    "metadata": {},
    "outputs": [
@@ -121,7 +143,7 @@
        "             ('day', Date)])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f43adea3-7430-44d9-87a5-159dcd60469b",
    "metadata": {},
    "outputs": [
@@ -168,7 +190,7 @@
        "             ('day', Date)])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dd251f0a-54b9-4790-8265-06c1b1e4edb4",
    "metadata": {},
    "outputs": [
@@ -301,7 +323,7 @@
        "4                  0.001408               250000000.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0a294f63-29e0-4c64-80f9-fe8161e66fd4",
    "metadata": {},
    "outputs": [
@@ -432,7 +454,7 @@
        "4               0.266893  April 2023  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0abc752c-e3ac-45f9-b63c-c955992a30ea",
    "metadata": {},
    "outputs": [
@@ -499,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "345cbf76-f7de-41f8-b774-384e7825dd24",
    "metadata": {},
    "outputs": [
@@ -528,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cf572c8f-6cda-4a38-827b-f2e1b532a9e4",
    "metadata": {},
    "outputs": [
@@ -557,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d5a9989a-f829-46ad-aaaa-12c982265422",
    "metadata": {},
    "outputs": [
@@ -596,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3c3b2d9d-ec87-4ded-b33b-cacfb3ff5326",
    "metadata": {},
    "outputs": [
@@ -625,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "192b075b-0d8c-4ed2-bf3b-f105cb0a7f19",
    "metadata": {},
    "outputs": [
@@ -654,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5e5067a7-4e74-4d40-aa44-fb73203cae7a",
    "metadata": {},
    "outputs": [
@@ -683,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "15068ec6-990c-40d1-b31c-5ec2876b215d",
    "metadata": {},
    "outputs": [
@@ -714,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "86ca1868-a1a5-4b4b-8395-b3f90cf656c4",
    "metadata": {},
    "outputs": [
