Fix typo in notebook

--- a/notebooks/03-data-exploration-contracts.ipynb
+++ b/notebooks/03-data-exploration-contracts.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "#### [Maria Silva](https://github.com/misilva73), July 2024\n",
     "\n",
-    "This notebook looks into contract deployment and events for ZKsync over almost 1 year. We use one main source of data - transaction logs. We also log block data to extract timestamps. This notebook should be an example of interacting and processing our [ZKsync public datasets](https://data.zksync.dev).\n",
+    "This notebook looks into contract deployment and events for ZKsync over almost 1 year. We use one main source of data - transaction logs. We also load block data to extract timestamps. This notebook should be an example of interacting and processing our [ZKsync public datasets](https://data.zksync.dev).\n",
     "\n",
     "## Import packages"
    ]
